--- a/new-properties.html
+++ b/new-properties.html
@@ -77,18 +77,20 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner" role="listbox">
             <div class="item active">
-              <img src="..." alt="...">
+              <img src="images/new-1.jpg" alt="304 Olsen Road">
               <div class="carousel-caption">
-                ...
+                <h3>304 Olsen Road</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis laudantium itaque, aut veritatis odio corporis qui commodi magnam. Est ab, repellat facilis sint libero quod, tenetur molestiae eius sunt impedit.</p>
               </div>
             </div>
             <div class="item">
-              <img src="..." alt="...">
+              <img src="images/new-2.jpg" alt="9872 Freemont Dr.">
               <div class="carousel-caption">
-                ...
+                <h3>9872 Freemont Dr.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex maiores ut deserunt, dolore labore hic vel eaque explicabo, fugit at placeat iste voluptates eius dignissimos reprehenderit ipsum fuga. Ducimus, maxime.</p>
               </div>
             </div>
-            ...
+            
           </div>
 
           <!-- Controls -->
